--- a/test/book.html
+++ b/test/book.html
@@ -9868,7 +9868,7 @@ F^\prime\left(x_0\right)=f\left(x_0\right)\,.
 <p>Let <span class="math-tex" data-type="tex">\(\varepsilon &gt;0\)</span>. If <span class="math-tex" data-type="tex">\(\left|x-y\right|&lt;\frac{\varepsilon}{B}\)</span> for <span class="math-tex" data-type="tex">\(a\le x&lt; y\le b\)</span>, then</p>
 <div class="math-tex" data-type="equation">
 \[
-\left|F\left(y\right)-F\left(x\right)\right|=\left|\int_x^yf\left(t\right)\,\mathrm{d} t\right|\le \int_x^y\left|f\left(t\right)\right|\,\mathrm{d} t\le\int_x^yB,\mathrm{d} t=B\left(y-x\right)&lt;\varepsilon\,.
+\left|F\left(y\right)-F\left(x\right)\right|=\left|\int_x^yf\left(t\right)\,\mathrm{d} t\right|\le \int_x^y\left|f\left(t\right)\right|\,\mathrm{d} t\le\int_x^yB\,\mathrm{d} t=B\left(y-x\right)&lt;\varepsilon\,.
 \]
 </div>
 <p>This shows that <span class="math-tex" data-type="tex">\(F\)</span> is (uniformly) continuous on <span class="math-tex" data-type="tex">\(\left[a,b\right]\)</span>.</p>
@@ -10605,7 +10605,7 @@ L_n=\sum_{i=1}^n\left|P_{i-1}P_i\right|&=\sum_{i=1}^n\sqrt{\left(x_i-x_{i-1}\rig
 <p>so we have</p>
 <div class="math-tex" data-type="equation">
 \[
-L_n=\sum_{i=1}^n\sqrt{1+\left(f^\prime\left(c_i\right)\right)^2}\,.
+L_n=\sum_{i=1}^n\sqrt{1+\left(f^\prime\left(c_i\right)\right)^2}\Delta x_i\,.
 \]
 </div>
 <p>Thus, <span class="math-tex" data-type="tex">\(L_n\)</span> is a Riemann sum for <span class="math-tex" data-type="tex">\(\int_a^b\sqrt{1+\left(f^\prime\left(x\right)\right)^2}\,\mathrm{d} x\)</span>. Being the limit of such Riemann sums as <span class="math-tex" data-type="tex">\(n\to\infty\)</span> in such a way that <span class="math-tex" data-type="tex">\(\max\Delta x_i \to 0\)</span>, that integral is the length of the curve <span class="math-tex" data-type="tex">\(C\)</span>.</p>
@@ -10776,7 +10776,7 @@ t=y - 1\,,\quad x=t^2-1=\left(y-1\right)^2-1=y^2-2y\,.
 \(t=1\)
 </foreignObject>
 <foreignObject x="200" y="60.0" width="42" height="18">
-\(t=-2\)
+\(t=2\)
 </foreignObject>
 </svg>
 <figcaption>The parabola defined parameterically by <span class="math-tex" data-type="tex">\(x=t^2-1, y=t+1, t\in \mathbb{R}\,.\)</span></figcaption></figure>
@@ -11504,7 +11504,7 @@ A=\frac{1}{2}\int_\alpha^\beta\left(f\left(\theta\right)\right)^2\,\mathrm{d}\th
 <div class="math-tex" data-type="equation">
 \[
 \begin{aligned}
-A&=\frac{1}{2}\int_0^\frac{\uppi}{4}2\sin^2\theta\,\mathrm{d} \theta+\frac{1}{2}\int_\frac{\uppi}{4}^\frac{\uppi}{2}2\sin2\theta\,\mathrm{d} \theta\\
+A&=\frac{1}{2}\int_0^\frac{\uppi}{4}2\sin^2\theta\,\mathrm{d} \theta+\frac{1}{2}\int_\frac{\uppi}{4}^\frac{\uppi}{2}\sin2\theta\,\mathrm{d} \theta\\
 &=\int_0^\frac{\uppi}{4}\frac{1-\cos2\theta}{2}\,\mathrm{d} \theta-\left.\frac{1}{4}\cos2\theta\right|_\frac{\uppi}{4}^\frac{\uppi}{2}\\
 &= \frac{\uppi}{8}-\left.\frac{1}{4}\sin2\theta\right|_0^\frac{\uppi}{4}+\frac{1}{4}=\frac{\uppi}{8}-\frac{1}{4}+\frac{1}{4}=\frac{\uppi}{8}\ \textrm{square units.}
 \end{aligned}
@@ -11591,8 +11591,8 @@ s = \int_\alpha^\beta \sqrt{\left(r^\prime\left(\theta\right)\right)^2+\left(r\l
 <div class="math-tex" data-type="equation">
 \[
 \begin{aligned}
-s&=2\int_0^\uppi\sqrt{a^2\sin^2\theta+a^2\left(1+\cos\theta\right)}\,\mathrm{d} \theta\\
-&=2\int_0^\uppi\sqrt{2a^2+a^2\cos\theta}\,\mathrm{d} \theta\quad\textrm{but }1+\cos\theta=2\cos^2\left(\frac{\theta}{2}\right)\\
+s&=2\int_0^\uppi\sqrt{a^2\sin^2\theta+a^2\left(1+\cos\theta\right)^2}\,\mathrm{d} \theta\\
+&=2\int_0^\uppi\sqrt{2a^2+2a^2\cos\theta}\,\mathrm{d} \theta\quad\textrm{but }1+\cos\theta=2\cos^2\left(\frac{\theta}{2}\right)\\
 &= 2\sqrt 2a\int_0^\uppi\sqrt{2\cos^2\left(\frac{\theta}{2}\right)}\,\mathrm{d} \theta\\
 &= 4a\int_0^\uppi\cos\left(\frac{\theta}{2}\right)\,\mathrm{d} \theta=\left.8a\sin\left(\frac{\theta}{2}\right)\right|_0^\uppi=8a\ \textrm{units.}
 \end{aligned}
